# seapopym-data

./: .gitignore  LICENSE  README.md  WORKFLOW_STATE.md  main.py  pyproject.toml
IA/: ASH_1_Initialization.md  ASH_2_Analyse.md  ASH_3_Architecture.md  ASH_4_Planification.md  ASH_5_Execution.md  ASH_6_Revue.md  ASH_7_Resolution.md  ASH_8_Test.md  ASH_9_Finalisation.md  ASH_ORCHESTRATOR.md
OLD_src/bats/: ANALYSIS_BATS.md
OLD_src/hot/: ANALYSIS_HOT.md
OLD_src/papa/: ANALYSIS_PAPA.md
data/bats/: info.md
data/bats/1_raw/: bats_bottle_metadata.json  bats_primary_production.txt  bats_primary_production_meta.csv  bats_primary_production_metadata.json  bats_zooplankton.txt  bats_zooplankton_metadata.json  bottle_metadata.md  primary_production_metadata.md  zooplankton_metadata.md
data/bats/2_preprocessed/: bats_primary_production.csv  bats_primary_production.nc  bats_zooplankton.csv  bats_zooplankton.nc
data/hot/1_raw/: hot_primary_production.csv  hot_primary_production.json  hot_primary_production.txt  hot_zooplankton.json  hot_zooplankton.txt
data/hot/2_processed/: hot_primary_production.csv  hot_primary_production.nc  hot_zooplankton.csv
data/stations/bats/: info.md
data/stations/hot/: info.md
data/stations/plymouth/: Plymouth_channel_L4_pter.csv  (+1 more)
data/zooplancton_product/: bats_zooplankton.nc  hot_zooplankton.nc  papa_zooplankton.nc  zooplancton_product_day_night.ipynb
data/zooplankton_product/: Bats_zooplankton.nc  Hot_zooplankton.nc  Papa_zooplankton.nc  final_zooplankton.nc  zooplancton_product_by_station.ipynb  zooplankton_product_calcofi.ipynb  zooplankton_product_gathered.ipynb  zooplankton_product_papa.ipynb
release/BATS_zooplankton.zarr/: .zattrs  .zmetadata
release/CALCOFI_zooplankton.zarr/: .zattrs  .zmetadata
release/HOT_zooplankton.zarr/: .zattrs  .zmetadata
release/PAPA_zooplankton.zarr/: .zattrs  .zmetadata
src/calcofi/: WORKFLOW_STATE.md
src/canaries/: WORKFLOW_STATE.md
src/core/: analysis.py  analysis_plots.py  analyze_station.py  compare_stations.py  io.py  methodology_observation_operator.md  pelagic.py  plotting.py  units.py
tests/core/: test_io.py  test_units.py
(+17561 files in other folders)
