[tool.poetry]
name = "seapopym-data"
version = "0.1.0"
description = "Standardize the observation data used by Seapopym."
authors = ["Jules Lehodey <juleslehodey31320@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
ipython = "^8.24.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
xarray = "^2024.3.0"
dask = "^2024.5.0"
matplotlib = "^3.8.4"
hvplot = "^0.10.0"
plotly = "^5.22.0"
dash = "^2.17.0"
voila = "^0.5.6"
zarr = "^2.18.0"
netcdf4 = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
