[project]
name = "seapopym-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cf-xarray>=0.10.10",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "pandas>=3.0.0",
    "pint-xarray>=0.6.0",
    "pyarrow>=23.0.0",
    "ruff>=0.14.14",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["E", "F"]
ignore = ["E402"] # needed for scripts sys.path

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
